# DATA515-Image-Classification

./: .gitignore  Image Download.ipynb  Landmark Classification 224x224.ipynb  Landmark Classification EfficientNetB0.ipynb  README.md  cnn.ipynb  environment.yml  landmarks_washington.csv  pyproject.toml  requirements.txt
.github/workflows/: build_test.yml
data/: landmarks_washington_clean_images.csv  landmarks_washington_full.csv
docs/: componentDesign.md  functionalSpecifications.md  milestones.md  useCases.md  userStories.md
docs/technology_review/: tech_review.md
images/: annie-staker.jpg:Zone.Identifier  anthony-nguyen.jpg:Zone.Identifier  izzy-valdivia.jpg:Zone.Identifier  sarah-innis.jpg:Zone.Identifier  seattle-skyline.jpg:Zone.Identifier
model/: cifar10_test_model.pth  pytorch_POC.py  wa_landmarks.py
notebooks/: Data Scraping.ipynb  Image Download.ipynb  Landmark Classification EfficientNetB0.ipynb  image_processing.py
notebooks/.ipynb_checkpoints/: Image Download-checkpoint.ipynb  Landmark Classification EfficientNetB0-checkpoint.ipynb
test/: image_processing_test.py  test_feedback_form.py  test_get_data_from_csv.py  test_search_page.py  test_ui.py  test_ui_search_page.py
ui/: Home.py  dashboard.py  search_page.py
ui/helpers/: feedback_handling.py  form_handler.py  getDataFromCSV.py  get_data_from_csv.py  get_model_predictions.py  load_landmarks.py  load_model.py  make_prediction.py
ui/pages/: 1_Classifier.py  2_Search_Page.py  3_Model_Analysis.py  4_Feedback.py  (+6 more)
walandmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+30 files in other folders)
